Refactor new-places-report-email-page.html